versions/v4.0.0/doxygen/html/globals_eval_w.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/doxygen/html/globals_eval_w.html
original_path: doxygen/html/globals_eval_w.html
---

| Logo | Zephyr API Documentation 4.0.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - w -

- W1\_SETINGS\_TYPE\_COUNT : [w1.h](group__w1__interface.md#gga382989ef707709b5d26c40a394833612a814e27d05a04e027c52cb206aaf69b22)
- W1\_SETTING\_SPEED : [w1.h](group__w1__interface.md#gga382989ef707709b5d26c40a394833612a788fee2803793832c58951d623d823d5)
- W1\_SETTING\_STRONG\_PULLUP : [w1.h](group__w1__interface.md#gga382989ef707709b5d26c40a394833612ae3293dfeaa3f1976e8cf57e694d5f811)
- WAIT\_DATA\_ROLE\_SWAP : [usbc.h](group____usbc__device__api.md#ggadf5d2934b5dc8e2b01d20bb904988784ae5ef03f78d78a7014404c581bad77c18)
- WAIT\_POWER\_ROLE\_SWAP : [usbc.h](group____usbc__device__api.md#ggadf5d2934b5dc8e2b01d20bb904988784a91f1f41bf9318e06c02c1957a39a762a)
- WAIT\_SINK\_REQUEST : [usbc.h](group____usbc__device__api.md#ggadf5d2934b5dc8e2b01d20bb904988784a009ce2ceacd92db88d9a6beb01f84a28)
- WAIT\_VCONN\_SWAP : [usbc.h](group____usbc__device__api.md#ggadf5d2934b5dc8e2b01d20bb904988784aa982aed81f39e35cde74399c6d74e601)
- WEBSOCKET\_OPCODE\_CLOSE : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35a291cb41ba1d8b535a1625d394c066191)
- WEBSOCKET\_OPCODE\_CONTINUE : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35a8912ad4ae9a3bbbe7ecb02cd2c1a8b35)
- WEBSOCKET\_OPCODE\_DATA\_BINARY : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35aa8d476ba0f4f3f892503d29fa76f1a69)
- WEBSOCKET\_OPCODE\_DATA\_TEXT : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35a2058fe14c900c3298affa6eed05d182c)
- WEBSOCKET\_OPCODE\_PING : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35af7a26bf82e06544e8393f17d6c074709)
- WEBSOCKET\_OPCODE\_PONG : [websocket.h](group__websocket.md#gga207402575311103c75906143724e8c35a141c7a8d3c0864115c8bfe3248e59d90)
- WIFI\_0 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62a530e059ee3ee741248c212287d3798f8)
- WIFI\_1 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62abe63329d11a9642d6d9dec3120d1f36c)
- WIFI\_2 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62aaf818813d87ea19fbe8396aff3f0c1d9)
- WIFI\_3 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62aeca0be00ba42d701b6f148036a18e362)
- WIFI\_4 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62a8e92427770e1ae2a3fe36deff6e6eef2)
- WIFI\_5 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62a4c94fcb62c5213c6e1cf46409ef6b824)
- WIFI\_6 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62ab9d56217d0abd71f7f824930ea226ffe)
- WIFI\_6E : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62a1bbbd42fc347212077fbac6f8be6f6a6)
- WIFI\_7 : [wifi.h](group__wifi__mgmt.md#ggabdb2a784d4727b71ab44cca04e422c62a8a121ae16410908526a2ce8c0beb9934)
- WIFI\_AP\_CONFIG\_PARAM\_MAX\_INACTIVITY : [wifi.h](group__wifi__mgmt.md#gga83546cf946a9123c563609e8903d9642a2ab06f57b7e2b75b18e919e7777e6a7c)
- WIFI\_AP\_CONFIG\_PARAM\_MAX\_NUM\_STA : [wifi.h](group__wifi__mgmt.md#gga83546cf946a9123c563609e8903d9642abdcec2dcf5a23339b90d5da94fd19958)
- WIFI\_AP\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35aa25a1cb94f2d78baed38752af5d195bd)
- WIFI\_EAP\_TYPE\_GTC : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a64daad77662868322e638da6531a5c0f)
- WIFI\_EAP\_TYPE\_MSCHAPV2 : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a37f7681b1fb5d7165010ec941018882f)
- WIFI\_EAP\_TYPE\_NONE : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a39edcc7a267ce608a1e818948b5d172b)
- WIFI\_EAP\_TYPE\_PEAP : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a8e619153aa3dad398c6ced36605f5e3f)
- WIFI\_EAP\_TYPE\_TLS : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a505b4b888231dd1fbc169d612d8f0c38)
- WIFI\_EAP\_TYPE\_TTLS : [wifi.h](group__wifi__mgmt.md#gga92b6fa6755491c3bd61f895213d07331a35fce37fccb3d27596c4e0a531109dac)
- WIFI\_FREQ\_BAND\_2\_4\_GHZ : [wifi.h](group__wifi__mgmt.md#gga1e2f0439a322355fa7368ea880c9c15da5f9b51af36837670cca39e21e46b0b11)
- WIFI\_FREQ\_BAND\_5\_GHZ : [wifi.h](group__wifi__mgmt.md#gga1e2f0439a322355fa7368ea880c9c15dad967a3e96fd9aa8201071310a6a62895)
- WIFI\_FREQ\_BAND\_6\_GHZ : [wifi.h](group__wifi__mgmt.md#gga1e2f0439a322355fa7368ea880c9c15da4f82878368ada29ce8986dd173efdcc0)
- WIFI\_FREQ\_BAND\_MAX : [wifi.h](group__wifi__mgmt.md#gga1e2f0439a322355fa7368ea880c9c15daea3a12c499228420adc9f3aac21d67a5)
- WIFI\_FREQ\_BAND\_UNKNOWN : [wifi.h](group__wifi__mgmt.md#gga1e2f0439a322355fa7368ea880c9c15da8091041d87f7df93223527a31e7e76a5)
- WIFI\_HAPD\_IFACE\_ACS : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba762c44f87b3dd9a08d2442b86ad06168)
- WIFI\_HAPD\_IFACE\_COUNTRY\_UPDATE : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001badd81c06c029edaa9ac973e03136d4ff4)
- WIFI\_HAPD\_IFACE\_DFS : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba2bcdccb48ba12b2561e08292365801a0)
- WIFI\_HAPD\_IFACE\_DISABLED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba21e99c5fff612afd417c0d4511a9c135)
- WIFI\_HAPD\_IFACE\_ENABLED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba82333796edc42607754281a400f07b2a)
- WIFI\_HAPD\_IFACE\_HT\_SCAN : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba66a141b5b317ac3dc0ca383886458a00)
- WIFI\_HAPD\_IFACE\_UNINITIALIZED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggafb2e8c10f596da3527abf9e227c3001ba7b4af20b16fb8881b963d4f2ebdad11a)
- WIFI\_MFP\_DISABLE : [wifi.h](group__wifi__mgmt.md#gga1f252da47d9650023d7fff6d08e49c76a260e7b4688790ed39f4f7dc70547e969)
- WIFI\_MFP\_OPTIONAL : [wifi.h](group__wifi__mgmt.md#gga1f252da47d9650023d7fff6d08e49c76a3ffdc747c7c70f7c1b70c96292f57fbf)
- WIFI\_MFP\_REQUIRED : [wifi.h](group__wifi__mgmt.md#gga1f252da47d9650023d7fff6d08e49c76af118a2f047c13db04d164235fa15f840)
- WIFI\_MGMT\_GET : [wifi\_mgmt.h](group__wifi__mgmt.md#ggae129d0783276e662575af2314eef86cda6b8183a773e0cdfa85bc4b41ae70fdcd)
- WIFI\_MGMT\_SET : [wifi\_mgmt.h](group__wifi__mgmt.md#ggae129d0783276e662575af2314eef86cdaa0d5931c8275a8d3288ab668b6dfb5a1)
- WIFI\_MODE\_AP : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423ba0e26010a13582e90def7366d6d663fe8)
- WIFI\_MODE\_IBSS : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423ba2ca83b19fb80412c2e6577164ebb393b)
- WIFI\_MODE\_INFRA : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423bae5da6b5ad0afa9d29172935e3409f813)
- WIFI\_MODE\_MESH : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423baf52eb7740bf223c253ec8754a6defa68)
- WIFI\_MODE\_P2P\_GO : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423ba777a0cbe012477f334d9b3fa7999d889)
- WIFI\_MODE\_P2P\_GROUP\_FORMATION : [wifi.h](group__wifi__mgmt.md#gga584f6239ac14e2bedc5e6bd72756423babaabed89e520fb03599ca941d6742521)
- WIFI\_MONITOR\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35ad5bc242078274f20949d9afa8c67b696)
- WIFI\_PACKET\_FILTER\_ALL : [wifi.h](group__wifi__mgmt.md#ggaa60495242c66a3fac294886856121c1fa4ef04395b41e0578bdeb77b5e7b8612b)
- WIFI\_PACKET\_FILTER\_CTRL : [wifi.h](group__wifi__mgmt.md#ggaa60495242c66a3fac294886856121c1fad55696b27a792f0a4aefbcf4ff0182de)
- WIFI\_PACKET\_FILTER\_DATA : [wifi.h](group__wifi__mgmt.md#ggaa60495242c66a3fac294886856121c1faca13230b05c62ece57186d6f01e5e244)
- WIFI\_PACKET\_FILTER\_MGMT : [wifi.h](group__wifi__mgmt.md#ggaa60495242c66a3fac294886856121c1fa2829d4e8b62d23d9fa5feb7cd9b2b2fc)
- WIFI\_PROMISCUOUS\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35aeb9bbb00469b4038f16b8b7cd2c5bf56)
- WIFI\_PS\_DISABLED : [wifi.h](group__wifi__mgmt.md#gga0fffeb57b68fb8cdef9d3d571368b8caa9860ebd60aad1694c2c903e18bbc5e82)
- WIFI\_PS\_ENABLED : [wifi.h](group__wifi__mgmt.md#gga0fffeb57b68fb8cdef9d3d571368b8caa3c1495662d43fb52261c4137096a4c47)
- WIFI\_PS\_EXIT\_CUSTOM\_ALGO : [wifi.h](group__wifi__mgmt.md#gga2d424d1711389fb784e916a87ff854b7aa8e9097d5c86dfc078fa230ca3b41ce5)
- WIFI\_PS\_EXIT\_EVERY\_TIM : [wifi.h](group__wifi__mgmt.md#gga2d424d1711389fb784e916a87ff854b7a9aa2663512a5fd0dec84807c4f2db832)
- WIFI\_PS\_MODE\_LEGACY : [wifi.h](group__wifi__mgmt.md#ggaffae7d2a754be5eb952ad2b83edad54ca761cfe837bd3b531d1e58298b5b1c5fd)
- WIFI\_PS\_MODE\_WMM : [wifi.h](group__wifi__mgmt.md#ggaffae7d2a754be5eb952ad2b83edad54ca528fb6047805bd00691b3ae14bd5eae5)
- WIFI\_PS\_PARAM\_EXIT\_STRATEGY : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912a8eb7bd5dbe14f9262980dfeb5bd85e03)
- WIFI\_PS\_PARAM\_FAIL\_CMD\_EXEC\_FAIL : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0a72bd1e14e5f5a7e154d609ecb27f9394)
- WIFI\_PS\_PARAM\_FAIL\_DEVICE\_CONNECTED : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0af93e9a85a784937562d85683bb433486)
- WIFI\_PS\_PARAM\_FAIL\_DEVICE\_NOT\_CONNECTED : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0abdc89ebeae1d558d83cfa85e236a083a)
- WIFI\_PS\_PARAM\_FAIL\_INVALID\_EXIT\_STRATEGY : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0adda816053e0d9a00f243b93b5b7178ce)
- WIFI\_PS\_PARAM\_FAIL\_OPERATION\_NOT\_SUPPORTED : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0af764fa8f4030bdff396fd7142d8c0093)
- WIFI\_PS\_PARAM\_FAIL\_UNABLE\_TO\_GET\_IFACE\_STATUS : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0a3ad0f43ac7afa204e7dd66838a8618b3)
- WIFI\_PS\_PARAM\_FAIL\_UNSPECIFIED : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0a3bed30a7c9b20bcad82214b7e47edd38)
- WIFI\_PS\_PARAM\_LISTEN\_INTERVAL : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912a1999ab313a62a9208d683fb1d3e01c90)
- WIFI\_PS\_PARAM\_LISTEN\_INTERVAL\_RANGE\_INVALID : [wifi.h](group__wifi__mgmt.md#ggad98099584d2222ede93aba42b1fbaff0abec8aa7ba9d334a23f4286d220eabe1f)
- WIFI\_PS\_PARAM\_MODE : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912ac65551112d0fdc28ec3805d2f70ddaab)
- WIFI\_PS\_PARAM\_STATE : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912a4f676a7085b7b0a37e717980412a379d)
- WIFI\_PS\_PARAM\_TIMEOUT : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912aefc0c3c93b09f30270f8e7914e9c9c29)
- WIFI\_PS\_PARAM\_WAKEUP\_MODE : [wifi.h](group__wifi__mgmt.md#ggabe45d132797047c098041331c8f6f912a93ce25e041d81fdaa6c3c77f526a8db8)
- WIFI\_PS\_WAKEUP\_MODE\_DTIM : [wifi.h](group__wifi__mgmt.md#ggac7f907644847e905d67c709fa4afae7fad7232d95f68a6ce41cdaedc58444bba6)
- WIFI\_PS\_WAKEUP\_MODE\_LISTEN\_INTERVAL : [wifi.h](group__wifi__mgmt.md#ggac7f907644847e905d67c709fa4afae7facbd61628e83216011745cb225e0c8b30)
- WIFI\_REASON\_DISCONN\_AP\_LEAVING : [wifi\_mgmt.h](group__wifi__mgmt.md#ggac782af0a60b202fd19597cabb7bd3a9aa34e3f78ce43db3daeaf32038e0baf204)
- WIFI\_REASON\_DISCONN\_INACTIVITY : [wifi\_mgmt.h](group__wifi__mgmt.md#ggac782af0a60b202fd19597cabb7bd3a9aa05fe2f87de30de47ee48f7615c2206e6)
- WIFI\_REASON\_DISCONN\_SUCCESS : [wifi\_mgmt.h](group__wifi__mgmt.md#ggac782af0a60b202fd19597cabb7bd3a9aa5c894399db8949a789ca4f5750b6f042)
- WIFI\_REASON\_DISCONN\_UNSPECIFIED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggac782af0a60b202fd19597cabb7bd3a9aa87f5d64a9fd3acf8d67c698199779e5c)
- WIFI\_REASON\_DISCONN\_USER\_REQUEST : [wifi\_mgmt.h](group__wifi__mgmt.md#ggac782af0a60b202fd19597cabb7bd3a9aaee75adafb52bd6ecaa547a76c6ccd0a7)
- WIFI\_SCAN\_TYPE\_ACTIVE : [wifi.h](group__wifi__mgmt.md#ggad30e29eda65ccafdbd7f11865937b8eaa7cb9f32d9cbed0c055394eb3ce0c67d9)
- WIFI\_SCAN\_TYPE\_PASSIVE : [wifi.h](group__wifi__mgmt.md#ggad30e29eda65ccafdbd7f11865937b8eaab286c65b4c0e4405b37db8fd7f72808f)
- WIFI\_SECURITY\_TYPE\_DPP : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca6cf0bd5db90deaa6b35f7afe122e8b5f)
- WIFI\_SECURITY\_TYPE\_EAP : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9cacce1e8fbfbf71fb4d669e9d0bfb04f80)
- WIFI\_SECURITY\_TYPE\_EAP\_PEAP\_GTC : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca0c9db910757c5a715a5e88089362fab5)
- WIFI\_SECURITY\_TYPE\_EAP\_PEAP\_MSCHAPV2 : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9caaa1dbea0100af80ca48ad594cddb4212)
- WIFI\_SECURITY\_TYPE\_EAP\_PEAP\_TLS : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca6d2e5f72b8bf76f093ab79be2a4b9477)
- WIFI\_SECURITY\_TYPE\_EAP\_TLS : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca85bcce61e75c01eb95083523e8925a40)
- WIFI\_SECURITY\_TYPE\_EAP\_TLS\_SHA256 : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca64ddf5be1aabce875fc66e39ff63be9b)
- WIFI\_SECURITY\_TYPE\_EAP\_TTLS\_MSCHAPV2 : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca3a20bf15c1e51313629789e6abe0273d)
- WIFI\_SECURITY\_TYPE\_FT\_EAP : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca00d759c3332700100ca7be612abeeda5)
- WIFI\_SECURITY\_TYPE\_FT\_EAP\_SHA384 : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca52aa23f908a4fae0864f2e187b89af93)
- WIFI\_SECURITY\_TYPE\_FT\_PSK : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca42e49ccccfed285d32aa9f36bcfd5fc5)
- WIFI\_SECURITY\_TYPE\_FT\_SAE : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9cab7bcc9437586d4940126a2ae1efdb092)
- WIFI\_SECURITY\_TYPE\_NONE : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca3f0a729e3c906d9c398a9fba163a0a9e)
- WIFI\_SECURITY\_TYPE\_PSK : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca1b9f70d6425eaa5a94211826a91c2368)
- WIFI\_SECURITY\_TYPE\_PSK\_SHA256 : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca0554b0fd5a6233aba5e25b035488380e)
- WIFI\_SECURITY\_TYPE\_SAE : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca00d5a50935f70344f03c778055755c2f)
- WIFI\_SECURITY\_TYPE\_SAE\_AUTO : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca4beacdae98f8ca155609d2fd660c5ed0)
- WIFI\_SECURITY\_TYPE\_SAE\_H2E : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca1e45d14be678d0693b3f03f73fc5b0df)
- WIFI\_SECURITY\_TYPE\_SAE\_HNP : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9caab329c818e10cbe98aac1f9c30849c91)
- WIFI\_SECURITY\_TYPE\_WAPI : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca37ab810084b3e024731f440e708b363d)
- WIFI\_SECURITY\_TYPE\_WEP : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca39b793d7f7c49dee4e60a5c6e6831724)
- WIFI\_SECURITY\_TYPE\_WPA\_AUTO\_PERSONAL : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca275483ee9bced209eb2d131825f599ff)
- WIFI\_SECURITY\_TYPE\_WPA\_PSK : [wifi.h](group__wifi__mgmt.md#ggadde31a04fa25ed805115c6b31854cd9ca4fd23c30c3b666132903fef27fd0651a)
- WIFI\_SOFTAP\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35ab2463380f240d8a51ef5b02e648c5623)
- WIFI\_STA\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35a340a5486c7da955853acdb005c4781f7)
- WIFI\_STATE\_4WAY\_HANDSHAKE : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a20c83447900bda237aab6466ca56f969)
- WIFI\_STATE\_ASSOCIATED : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a890de4b839cbf4608da8895ea0999ddc)
- WIFI\_STATE\_ASSOCIATING : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4aaed2e6aeb678013a1723061e13de463b)
- WIFI\_STATE\_AUTHENTICATING : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a96a063e6a22124d4c9f5403833da47ba)
- WIFI\_STATE\_COMPLETED : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4aaeaa0f48af3cdd51c20d37001a06106f)
- WIFI\_STATE\_DISCONNECTED : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a0b8eb7a4abfc3767cf2fc8244529435f)
- WIFI\_STATE\_GROUP\_HANDSHAKE : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a0efa624eebc1f985c9a25e155f2ecf1e)
- WIFI\_STATE\_INACTIVE : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4aec77d64f5aa60ab16b92b959674fa598)
- WIFI\_STATE\_INTERFACE\_DISABLED : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a19974cdb014393eb790b798f274a0a5c)
- WIFI\_STATE\_SCANNING : [wifi.h](group__wifi__mgmt.md#gga981961f747b919d61d3ccbd41e4508b4a95d7970cb93ec284fbdc1d4ec5d6f99b)
- WIFI\_STATUS\_AP\_AUTH\_TYPE\_NOT\_SUPPORTED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884abe5a626d22051522255d98fdfdfbfcc8)
- WIFI\_STATUS\_AP\_CHANNEL\_NOT\_ALLOWED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a0b1cb592c54c16e8a54defee71c5fd15)
- WIFI\_STATUS\_AP\_CHANNEL\_NOT\_SUPPORTED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a5acb85a2361ca72ed10966b829c5753b)
- WIFI\_STATUS\_AP\_FAIL : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a6c6801381caa3862004662169202fa9a)
- WIFI\_STATUS\_AP\_OP\_NOT\_PERMITTED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a36a58980bdc7877c910441590137ddbe)
- WIFI\_STATUS\_AP\_OP\_NOT\_SUPPORTED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a2105e6c49b3bcb5f7dcacbc1e5ce9cca)
- WIFI\_STATUS\_AP\_SSID\_NOT\_ALLOWED : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884ac18a7b551f8c6bb7737b0e8e60c323ce)
- WIFI\_STATUS\_AP\_SUCCESS : [wifi\_mgmt.h](group__wifi__mgmt.md#ggaaf730bf76adc06434c7ac63bf0417884a0df52848da8735892d0eb1e381b2cd7c)
- WIFI\_STATUS\_CONN\_AP\_NOT\_FOUND : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8a2ae79fa389bb447fa108e0107aeff2f4)
- WIFI\_STATUS\_CONN\_FAIL : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8ab80ec4b70c75695fbe698034e2cb6a44)
- WIFI\_STATUS\_CONN\_LAST\_STATUS : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8aeee5fb8d8c3e7905554d08331f06191f)
- WIFI\_STATUS\_CONN\_SUCCESS : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8a380410b02b1e12599f37d1dcb844f5bd)
- WIFI\_STATUS\_CONN\_TIMEOUT : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8abb8783b92aec2ed1ffc6331979888563)
- WIFI\_STATUS\_CONN\_WRONG\_PASSWORD : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8a90d91f96a35c9f6847cbc7abd8c20bf8)
- WIFI\_STATUS\_DISCONN\_FIRST\_STATUS : [wifi\_mgmt.h](group__wifi__mgmt.md#gga86a5741e54aeb3e290142b0de217b8a8abe1401e5d516c0d63291add15e558b18)
- WIFI\_SUITEB : [wifi.h](group__wifi__mgmt.md#gga168e7affe48d72d7d1e3ccddb63fe5a7aa8e819a5bbe3bb65e98c69709c086d89)
- WIFI\_SUITEB\_192 : [wifi.h](group__wifi__mgmt.md#gga168e7affe48d72d7d1e3ccddb63fe5a7a6fdf84ffa5fcca7371bf2da06be6c30d)
- WIFI\_TWT\_BROADCAST : [wifi.h](group__wifi__mgmt.md#gga695123cd534e2499f516a07fdc5cafa8a66d66faf5c949fa414b163eacb3871fa)
- WIFI\_TWT\_FAIL\_CMD\_EXEC\_FAIL : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a7069a257d030d3df36ce944e7bb33556)
- WIFI\_TWT\_FAIL\_DEVICE\_NOT\_CONNECTED : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6aa17ee943d673d66444568526211f8831)
- WIFI\_TWT\_FAIL\_FLOW\_ALREADY\_EXISTS : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6afc608d761adc76392854eefd4561dc5c)
- WIFI\_TWT\_FAIL\_INVALID\_FLOW\_ID : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a490d146c72579b610ee02424dc01bcb6)
- WIFI\_TWT\_FAIL\_IP\_NOT\_ASSIGNED : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a0783df9338c2f1a55fc5cd31f9a257ee)
- WIFI\_TWT\_FAIL\_OPERATION\_IN\_PROGRESS : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6ac3aed05ad40e7e489a3c2b53c01a05c7)
- WIFI\_TWT\_FAIL\_OPERATION\_NOT\_SUPPORTED : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a7ee7ac64ab2471620825b949be37da2d)
- WIFI\_TWT\_FAIL\_PEER\_NOT\_HE\_CAPAB : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a86c8021210168b64b2b967e6e5611860)
- WIFI\_TWT\_FAIL\_PEER\_NOT\_TWT\_CAPAB : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6ac712d17d6babb65323af23311c4f81ce)
- WIFI\_TWT\_FAIL\_UNABLE\_TO\_GET\_IFACE\_STATUS : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6a8602d648589b0341fb50940a79400fef)
- WIFI\_TWT\_FAIL\_UNSPECIFIED : [wifi.h](group__wifi__mgmt.md#gga97fa304f9a1db2294a93cccd4c93bcf6ad1336b74984f46238b4baf6ea0b7ad13)
- WIFI\_TWT\_INDIVIDUAL : [wifi.h](group__wifi__mgmt.md#gga695123cd534e2499f516a07fdc5cafa8ad8205ed96091863156066d9df874bee0)
- WIFI\_TWT\_RESP\_NOT\_RECEIVED : [wifi.h](group__wifi__mgmt.md#gga4d03aedac13ee4512d7717ac624f319aa757054d1ad2033ebc6b9a0fb1f3b2c72)
- WIFI\_TWT\_RESP\_RECEIVED : [wifi.h](group__wifi__mgmt.md#gga4d03aedac13ee4512d7717ac624f319aa0ec181caece9e9d5f12827c6c5390286)
- WIFI\_TWT\_SETUP : [wifi.h](group__wifi__mgmt.md#ggad0e998aeb1b27c4f203ca76339d323a3a127b1ba136c0a8b226378ce6398c4c45)
- WIFI\_TWT\_SETUP\_CMD\_ACCEPT : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022afb7fb9876e2774f45cc7688b0308b64a)
- WIFI\_TWT\_SETUP\_CMD\_ALTERNATE : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022a8247cf7843a5d2a7ddf48da1c5be9ae1)
- WIFI\_TWT\_SETUP\_CMD\_DEMAND : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022a4a687e30a23f1705e5b359b7d7b6366e)
- WIFI\_TWT\_SETUP\_CMD\_DICTATE : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022a9965a5ee6b30a64d6849690f60d859f3)
- WIFI\_TWT\_SETUP\_CMD\_GROUPING : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022a846145fb934c5235a5afea275263c279)
- WIFI\_TWT\_SETUP\_CMD\_REJECT : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022aed1c84e6699331726aa75477e9a1f565)
- WIFI\_TWT\_SETUP\_CMD\_REQUEST : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022a7b6568e80a31a17a742c23ae0f6892bd)
- WIFI\_TWT\_SETUP\_CMD\_SUGGEST : [wifi.h](group__wifi__mgmt.md#gga31c78afc89bfdc4b54cee177843f8022abdd60c33f3a61b21c9f72bd66897b648)
- WIFI\_TWT\_STATE\_AWAKE : [wifi\_mgmt.h](group__wifi__mgmt.md#gga38c184ea35c02f304cccdf389ca6d552a7b7b45f85d9644f897ca00bd7864e1b0)
- WIFI\_TWT\_STATE\_SLEEP : [wifi\_mgmt.h](group__wifi__mgmt.md#gga38c184ea35c02f304cccdf389ca6d552a37a7aba20723b6614e39e1c417f3113c)
- WIFI\_TWT\_TEARDOWN : [wifi.h](group__wifi__mgmt.md#ggad0e998aeb1b27c4f203ca76339d323a3a8b7aef65a36005a1fc29367b9455e41f)
- WIFI\_TWT\_TEARDOWN\_FAILED : [wifi.h](group__wifi__mgmt.md#ggad3709d07aaa3ed59b48f9dd7bd181989a53b36533aa40cb076be68cd1c902582d)
- WIFI\_TWT\_TEARDOWN\_SUCCESS : [wifi.h](group__wifi__mgmt.md#ggad3709d07aaa3ed59b48f9dd7bd181989a17a0d82cff424ff5bdf462b6db63f965)
- WIFI\_TWT\_WAKE\_TBTT : [wifi.h](group__wifi__mgmt.md#gga695123cd534e2499f516a07fdc5cafa8a8eef8349e12980c39e63fd11ce2ab978)
- WIFI\_TX\_INJECTION\_MODE : [wifi.h](group__wifi__mgmt.md#gga4a9243eeb974111d6047fd3d8d9cbf35a2106a5725118f9b9b2a0ce04453adb74)
- WIFI\_TYPE\_SAP : [wifi\_nm.h](group__wifi__nm.md#ggadba91c7f3ef5027f7d2a01229372a1a1adf2032231c71212f10a5e2da2345e345)
- WIFI\_TYPE\_STA : [wifi\_nm.h](group__wifi__nm.md#ggadba91c7f3ef5027f7d2a01229372a1a1aa2aa21793c3c19fd559e469d63ed1468)
- WIFI\_WPS\_PBC : [wifi\_mgmt.h](group__wifi__mgmt.md#gga4c36ae1a5171d3fbaeebf95c16be496da093f5b3ef95d9e571ea169430da57e88)
- WIFI\_WPS\_PIN\_GET : [wifi\_mgmt.h](group__wifi__mgmt.md#gga4c36ae1a5171d3fbaeebf95c16be496da75bd5067903c2bba8a06732f0431393d)
- WIFI\_WPS\_PIN\_SET : [wifi\_mgmt.h](group__wifi__mgmt.md#gga4c36ae1a5171d3fbaeebf95c16be496da58120620fd2fca80bdac7990ed0e7552)
- WKPU\_NXP\_S32\_BOTH\_EDGES : [intc\_wkpu\_nxp\_s32.h](intc__wkpu__nxp__s32_8h.md#a7440f457f38303fdc829933f897ebbd6a24ed3d6d41e75d8f97acf883d91301de)
- WKPU\_NXP\_S32\_FALLING\_EDGE : [intc\_wkpu\_nxp\_s32.h](intc__wkpu__nxp__s32_8h.md#a7440f457f38303fdc829933f897ebbd6a8aa0f7310ec4a6a87d6e50366dbf2ec3)
- WKPU\_NXP\_S32\_RISING\_EDGE : [intc\_wkpu\_nxp\_s32.h](intc__wkpu__nxp__s32_8h.md#a7440f457f38303fdc829933f897ebbd6a1aa475b8f106d699419b85c226075207)
- WPA\_CAPA\_ENC\_BIP : [wifi.h](group__wifi__mgmt.md#ggaf84d5e1a68393483fc6063c06b8f26e0a7d5bfccaca027a00e834a8db03f8b8f8)
- WPA\_CAPA\_ENC\_BIP\_GMAC\_128 : [wifi.h](group__wifi__mgmt.md#ggaf84d5e1a68393483fc6063c06b8f26e0ab15e42ab1ba05c1296b19cbfff2ccf70)
- WPA\_CAPA\_ENC\_BIP\_GMAC\_256 : [wifi.h](group__wifi__mgmt.md#ggaf84d5e1a68393483fc6063c06b8f26e0ae437a3b3abd043b184e545a4ec40c096)
- WPA\_CAPA\_ENC\_CCMP : [wifi.h](group__wifi__mgmt.md#gga7f7b23ac019ca504a2006f0376735645ac0af8c48884381d3be7e9a2b7f3b54e1)
- WPA\_CAPA\_ENC\_GCMP : [wifi.h](group__wifi__mgmt.md#gga7f7b23ac019ca504a2006f0376735645a88fe5cd8b7777b931d869cb76ae65b1d)
- WPA\_CAPA\_ENC\_GCMP\_256 : [wifi.h](group__wifi__mgmt.md#gga7f7b23ac019ca504a2006f0376735645a60599a3fdfad99c6ec1471d4973556c4)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.0.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
